# secsgem-driver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: amat_centura.yaml  lam_kiyo.yaml  tel_lithius.yaml  template.yaml
examples/: basic_connection.py  config_driven.py  secs2_codec.py
src/secsgem/: __init__.py  config.py  driver.py  hsms.py  messages.py  secs2.py
tests/: test_secs2.py
